<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">先声</string>
    <string name="action_settings">程序设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_slidebar_title">主菜单</string>
    <string name="UserName">一卡通</string>
    <string name="PassWord">密码</string>
    <string name="LoginButton">登录</string>
    <string name="IDCardUserName">一卡通账号</string>
    <string name="IDCardPassWord">一卡通密码</string>
    <string name="IDCardLoginButton">登录一卡通账户</string>
    <string name="IDCardLoginOffButton">退出一卡通账户</string>
    <string name="IDCardInfo">一卡通账号：</string>
    <string name="TyxUserName">体育系账号(一卡通号)</string>
    <string name="TyxPassWord">体育系密码</string>
    <string name="TyxLoginButton">登录体育系账户</string>
    <string name="TyxLoginOffButton">退出体育系账户</string>
    <string name="TyxInfo">体育系账号用户名：</string>
    <string name="LibUserName">图书馆账号</string>
    <string name="LibPassWord">图书馆密码</string>
    <string name="LibLoginButton">登录图书馆账户</string>
    <string name="LibLoginOffButton">退出图书馆账户</string>
    <string name="LibInfo">图书馆账号用户名：</string>
    <string name="MENU_EXIT">MENU_EXIT</string>
    <string name="MENU_ABOUT">MENU_ABOUT</string>
    <string name="aboutInfo">aboutInfo</string>
    <string name="ok_label">ok_label</string>

    <!-- academic BEGIN -->
    <string name="cus_lv_get_more">More</string>
    <string name="cus_lv_release_to_refresh">Release to refresh</string>
    <string name="cus_lv_pull_to_refresh">Pull to refresh</string>
    <string name="cus_lv_refreshing">Refreshing...</string>
    <string name="cus_lv_updating">Updating：</string>
    <!-- academic END -->
    <string name="mainmenu_exit_app">退出</string>
    <string name="menu_main_content_pref_title">偏好设置</string>
    <string name="main_frame_module_choice_title">模块选择</string>
    <string name="title_activity_app_update">软件更新</string>
    <string name="main_frame_content_refresh">刷新</string>
    <string name="main_frame_menu_refreshing">正在刷新...</string>
    <string name="main_frame_menu_more">More...</string>
    <string name="setting_powered_by_herald">Powered by Herald</string>
    <string name="setting_about_2001_2014">2001-2014</string>
    <string name="setting_about_version">build 20131027</string>
    <!-- <string name="title_activity_main_content_module_pref">主界面模块</string> -->
    <string name="main_frame_list_color_pref_key">list_choice</string>
    <string name="main_frame_preferences">com.herald.ezherald_preferences</string>
    <string name="title_activity_first_screen">FirstScreenActivity</string>
    <string name="first_screen_loading">先声客户端玩命启动中...</string>
    <string name="account_library_detail">图书馆账号可是相当常之复杂:\\n 13级及以后的童鞋请用一卡通号\\n 其余同学请用你的原始学号(转系之前)\\n 默认密码据说是原始学号</string>
    <string name="http_herald_seu_edu_cn_">http://herald.seu.edu.cn/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="title_activity_apiaccount">账户信息</string>
    <string name="title_activity_treehole_send">写心声</string>

</resources>