<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
     >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingTop="5dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
		
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:src="@drawable/ic_launcher"
            android:paddingRight="10dp"
            />
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            
            >
            
            <TextView
            android:id="@+id/setting_about_textview_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="东南大学先声网安卓客户端"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
        
    </LinearLayout>

    <TextView
        android:id="@+id/setting_about_version_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/setting_about_version" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_powered_by_herald"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#aaaaaa"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="http://herald.seu.edu.cn/"
        android:autoLink="web"
        android:layout_gravity="center_horizontal"
         />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_about_2001_2013"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#bbbbbb"
        />

</LinearLayout>
